--- a/ansible/roles/kibana/tasks/kibana_configure.yml
+++ b/ansible/roles/kibana/tasks/kibana_configure.yml
@@ -1,16 +1,20 @@
+# Copy the Kibana configuration file to the server.
 - name: Configure kibana.yml
   copy:
     src: kibana.yml
     dest: /etc/kibana/kibana.yml
 
+# Generate an enrollment token for Kibana setup.
 - name: Run Elasticsearch Create Enrollment Token Command
   shell: /usr/share/elasticsearch/bin/elasticsearch-create-enrollment-token -s kibana
   register: token_response
 
+# Store the enrollment token from the command output.
 - name: Extract Token from Response
   set_fact:
     enrollment_token: "{{ token_response.stdout }}"
 
+# Setup Kibana with the enrollment token.
 - name: Run Kibana Enrollment Token Command
   shell: /usr/share/kibana/bin/kibana-setup --enrollment-token {{ enrollment_token }}
   args:
