--- a/ansible/roles/kibana/tasks/kibana_install.yml
+++ b/ansible/roles/kibana/tasks/kibana_install.yml
@@ -1,21 +1,25 @@
 ---
+# Import Elastic's GPG key for package verification.
 - name: Import Kibana GPG Key
   ansible.builtin.apt_key:
     url: https://artifacts.elastic.co/GPG-KEY-elasticsearch
     state: present
 
+# Add Kibana's official repository for package installation.
 - name: Add Kibana repository
   ansible.builtin.apt_repository:
     repo: "deb https://artifacts.elastic.co/packages/{{ elk_version[:1] }}.x/apt stable main"
     state: present
     update_cache: yes
 
+# Install the specified version of Kibana.
 - name: Install Kibana
   ansible.builtin.apt:
     name: kibana={{ elk_version }}
     state: present
     update_cache: yes
 
+# Ensure the Kibana service is enabled and running.
 - name: Enable and Start Kibana Service
   ansible.builtin.service:
     name: kibana
